--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
     "jquery": "^3.7.0",
     "vite": "^4.3.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "terser": "^5.17.4"
+  }
 }
