--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "django-crispy-formset-modal",
   "scripts": {
-    "build": "vite build"
+    "build": "vite build",
+    "build:tailwind": "npx tailwindcss -i ./demo/static/src/input.css -o ./demo/static/styles.css --minify"
   },
   "dependencies": {
     "jquery": "^3.7.0",
     "vite": "^4.3.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "tailwindcss": "^3.3.2",
     "terser": "^5.17.4"
   }
 }
