--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,4 +18,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CONFIG_FILE: mkdocs.yml
-          REQUIREMENTS: ./requirements.txt
+          REQUIREMENTS: ./requirements-dev.txt
