--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,13 @@ copyright: Copyright &copy; 2023 Blas Fernández
 
 nav:
   - Welcome: index.md
+  - Installation: installation.md
+  - Getting Started: getting-started.md
+  - Advanced Usage: advanced-usage.md
+  - Customizing: customizing.md
+  - FAQs: faqs.md
+  - Demo: demo.md
+  - Contributing: contributing.md
   - Changelog: changelog.md
 
 theme:
