build: add migration process

--- a/.deployment/Dockerfile
+++ b/.deployment/Dockerfile
@@ -18,6 +18,8 @@ COPY . /code
 
 RUN python manage.py collectstatic --noinput
 
+RUN python manage.py migrate
+
 EXPOSE 8000
 
 # TODO: replace demo.wsgi with <project_name>.wsgi
