--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ['setuptools', 'wheel']
+build-backend = 'setuptools.build_meta'
+
 [project]
 name = "django-crispy-formset-modal"
 version = "0.12"
@@ -56,7 +60,6 @@ bugs = "https://github.com/blasferna/django-crispy-formset-modal/issues"
 
 [tool.setuptools.packages]
 find = { include = ["crispy_formset_modal", "*.py", "*.html", "*.css", "*.po", "*.mo", "*.map", "LICENSE", "README.md"] }
-
 
 [tool.uv]
 package = true
