--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
+recursive-include crispy_formset_modal *.html *.css *.js *.po *.mo *.map
 include LICENSE
 include pyproject.toml
 include README.md
-recursive-include *.html *.css *.js *.po *.mo *.map
 
